--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
     <modules>
         <module>springboot-rabbitmq</module>
         <module>springboot-quarz</module>
+        <module>springboot-freemarker</module>
+        <module>example-spring-boot-starter</module>
+        <module>springboot-starter-custom</module>
+        <module>springboot-swagger</module>
+        <module>springboot-elasticsearch</module>
     </modules>
 
 </project>
